Fixing past alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,9 @@ textarea {
   .btn--signup{
     padding: 1.5rem 8rem;
     font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .btn--bg {
     padding: 1.5rem 8rem;
